# python-api-production-ready

./: LICENSE  README.md  docker-compose.yaml
fast-api-celery/: Dockerfile  Dockerfile.base  Dockerfile.custom  pyproject.toml  starter.sh
fast-api-celery/api/: main.py  models.py
fast-api-celery/logic/: model.py
fast-api-celery/worker/: celery.py  tasks.py
rabbit-mq/: Dockerfile
redis/: Dockerfile
