[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["denisbrogg <denis.broggini@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.2.7"
redis = "^4.3.3"
fastapi = {extras = ["all"], version = "^0.78.0"}
flower = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
